--- a/package.json
+++ b/package.json
@@ -109,16 +109,25 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
+    "diff-match-patch": "^1.0.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.1",
+    "franc": "^6.0.0",
+    "iconv-lite": "^0.4.24",
+    "immutable": "^3.8.1",
+    "jschardet": "^1.6.0",
+    "jszip": "^3.1.5",
     "path-browserify": "^1.0.1",
     "react": "^18.1.0",
+    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.3.3",
+    "react-router-scroll-4": "^1.0.0-beta.2",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.8",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "webvtt-parser": "^2.1.2"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
@@ -170,6 +179,7 @@
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.4.1",
     "mini-css-extract-plugin": "^2.6.0",
+    "png2icons": "^1.0.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.13.0",
     "react-test-renderer": "^18.1.0",
