change icon and name to Voracious. Copy menu from old Voracious app.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "description": "A foundation for scalable desktop apps",
+  "name": "Voracious",
+  "description": "A video player for studying foreign languages (esp. Japanese)",
+  "author": "Russel Simmons",
+  "license": "MIT",
   "keywords": [
     "electron",
     "boilerplate",
@@ -10,27 +13,6 @@
     "webpack",
     "hot",
     "reload"
-  ],
-  "homepage": "https://github.com/electron-react-boilerplate/electron-react-boilerplate#readme",
-  "bugs": {
-    "url": "https://github.com/electron-react-boilerplate/electron-react-boilerplate/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/electron-react-boilerplate/electron-react-boilerplate.git"
-  },
-  "license": "MIT",
-  "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://electron-react-boilerplate.js.org"
-  },
-  "contributors": [
-    {
-      "name": "Amila Welihinda",
-      "email": "amilajack@gmail.com",
-      "url": "https://github.com/amilajack"
-    }
   ],
   "main": "./src/main/main.ts",
   "scripts": {
@@ -206,8 +188,8 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "Voracious",
+    "appId": "org.artemme.Voracious",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
@@ -217,6 +199,7 @@
     ],
     "afterSign": ".erb/scripts/notarize.js",
     "mac": {
+      "icon": "assets/icon.icns",
       "target": {
         "target": "default",
         "arch": [
